# hiking-simulator

./: BUILD_SUCCESS.md  CMakeLists.txt  OBJECT_SYSTEM.md  README.md  README_BUILD.md  build.bat  build.py  demo.py  main.cpp  main_core.cpp  main_firstperson.cpp  main_graphics.cpp  main_sdl_test.cpp  main_shaders.cpp  main_test.cpp  main_visual.cpp
engine/assets/: AssetManager.cpp  AssetManager.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
engine/audio/: AudioSystem.cpp  AudioSystem.h  Music.cpp  Music.h  Sound.cpp  Sound.h
engine/core/: Config.cpp  Config.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
engine/debug/: DebugDraw.cpp  DebugDraw.h
engine/environment/: EnvironmentSystem.cpp  EnvironmentSystem.h  Wind.cpp  Wind.h
engine/math/: MathTypes.h  Transform.cpp  Transform.h
engine/physics/: Collider.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
engine/platform/: SDLAudio.h  SDLInput.cpp  SDLInput.h  SDLWindow.cpp  SDLWindow.h  Time.cpp  Time.h
engine/render/: Camera.cpp  Camera.h  FirstPersonCamera.h  Mesh.cpp  Mesh.h  OpenGLContext.cpp  OpenGLContext.h  PlaneGenerator.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/render/materials/: Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h
engine/render/shaders/: foliage.frag  foliage.vert  water.frag  water.vert
engine/scene/: Component.h  Entity.cpp  Entity.h  ObjectManager.h  System.h  World.cpp  World.h
engine/tools/: DebugPanels.cpp  DebugPanels.h  ImGuiLayer.cpp  ImGuiLayer.h
engine/ui/: Layout.cpp  Layout.h  UIContext.cpp  UIContext.h  Widget.cpp  Widget.h
game/assets/environment/: README.md
game/assets/environment/sky/: moon.ppm  sun.ppm
game/assets/shared/models/shopping_cart/: license.txt  scene.gltf
game/components/: CameraController.cpp  CameraController.h  PlayerController.cpp  PlayerController.h
game/definitions/: climates.json  items.json
game/levels/debug/: level.meta.json
game/scene/: SceneSerializer.cpp  SceneSerializer.h  World.h
game/scene/ecs/: Component.h  Entity.h  System.h
game/systems/: GameplaySystem.cpp  GameplaySystem.h  PlayerSystem.cpp  PlayerSystem.h
